docs/api/qiskit/0.33/qiskit.pulse.channels.MeasureChannel.mdx
---
title: MeasureChannel (v0.33)
description: API reference for qiskit.pulse.channels.MeasureChannel in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.channels.MeasureChannel
---

# MeasureChannel

<Class id="qiskit.pulse.channels.MeasureChannel" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/channels.py" signature="MeasureChannel(index)" modifiers="class">
  Bases: `qiskit.pulse.channels.PulseChannel`

  Measure channels transmit measurement stimulus pulses for readout.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  ## Methods

  <span id="qiskit-pulse-channels-measurechannel-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.pulse.channels.MeasureChannel.is_parameterized" signature="MeasureChannel.is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  ## Attributes

  ### index

  <Attribute id="qiskit.pulse.channels.MeasureChannel.index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Attribute>

  ### name

  <Attribute id="qiskit.pulse.channels.MeasureChannel.name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.channels.MeasureChannel.parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Attribute>

  ### prefix

  <Attribute id="qiskit.pulse.channels.MeasureChannel.prefix" attributeValue="'m'" />
</Class>

