docs/api/qiskit/1.3/qiskit.pulse.channels.MeasureChannel.mdx
---
title: MeasureChannel (v1.3)
description: API reference for qiskit.pulse.channels.MeasureChannel in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.channels.MeasureChannel
---

# MeasureChannel

<Class id="qiskit.pulse.channels.MeasureChannel" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/pulse/channels.py#L185-L188" signature="qiskit.pulse.channels.MeasureChannel(*args, **kwargs)" modifiers="class">
  Bases: `PulseChannel`

  Measure channels transmit measurement stimulus pulses for readout.

  Channel class.

  <Admonition title="Deprecated since version 1.3" type="danger">
    The class `qiskit.pulse.channels.Channel` is deprecated as of Qiskit 1.3. It will be removed in Qiskit 2.0. The entire Qiskit Pulse package is being deprecated and will be moved to the Qiskit Dynamics repository: [https://github.com/qiskit-community/qiskit-dynamics](https://github.com/qiskit-community/qiskit-dynamics)
  </Admonition>

  **Parameters**

  **index** – Index of channel.

  ## Attributes

  ### index

  <Attribute id="qiskit.pulse.channels.MeasureChannel.index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.
  </Attribute>

  ### name

  <Attribute id="qiskit.pulse.channels.MeasureChannel.name">
    Return the shorthand alias for this channel, which is based on its type and index.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.channels.MeasureChannel.parameters">
    Parameters which determine the channel index.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.pulse.channels.MeasureChannel.prefix" attributeTypeHint="str | None" attributeValue="'m'">
    A shorthand string prefix for characterizing the channel type.
  </Attribute>

  ## Methods

  ### is\_parameterized

  <Function id="qiskit.pulse.channels.MeasureChannel.is_parameterized" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/pulse/channels.py#L137-L139" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>
</Class>

